--- a/papers/ivs13/src/conclusion.tex
+++ b/papers/ivs13/src/conclusion.tex
@@ -11,4 +11,6 @@ a 2D robot equipped with a laser range finder.
 In the near future, we will consider the self calibration of multiple sensors
 (cameras, 3D/2D LRF, GPS/INS system) mounted on an autonomous car and a C++
 implementation. From a research point of view, we would like to further automate
-the selection of the free parameters. Lastly, we want to detect...\todo{To be discussed}.
+the selection of the free parameters. Lastly, we want to detect stepwise changes
+in the calibration parameters in order to trigger recalibration in case of
+mechanical shocks.
