--- a/papers/ivs13/bib/bibliography.bib
+++ b/papers/ivs13/bib/bibliography.bib
@@ -3832,6 +3832,19 @@
   timestamp = {2010.12.13}
 }
 
+@ARTICLE{hermann77nonlinear,
+  author = {Robert Hermann and Arthur J. Krener},
+  title = {Nonlinear controllability and observability},
+  journal = {IEEE Transactions on Automatic Control},
+  year = {1977},
+  volume = {22},
+  pages = {728-740},
+  number = {5},
+  file = {hermann77nonlinear.pdf:hermann77nonlinear.pdf:PDF},
+  owner = {jmaye},
+  timestamp = {2012.10.29}
+}
+
 @ARTICLE{hess90control,
   author = {Ronald A. Hess and Ali Modjtahedzadeh},
   title = {A control theoretic model of driver steering behavior},
@@ -4504,6 +4517,20 @@
   pages = {506--513},
   file = {ke04pca.pdf:ke04pca.pdf:PDF},
   pdf = {ke04pca.pdf}
+}
+
+@ARTICLE{kelly11visual,
+  author = {Jonathan Kelly and Gaurav S. Sukhatme},
+  title = {Visual-Inertial Sensor Fusion: Localization, Mapping and Sensor-to-Sensor
+	Self-Calibration},
+  journal = {The International Journal of Robotics Research (IJRR)},
+  year = {2011},
+  volume = {30},
+  pages = {56-79},
+  number = {1},
+  file = {kelly11visual.pdf:kelly11visual.pdf:PDF},
+  owner = {jmaye},
+  timestamp = {2012.10.29}
 }
 
 @ARTICLE{khan09tracking,
@@ -6103,6 +6130,20 @@
   file = {minka03estimating.pdf:minka03estimating.pdf:PDF},
   owner = {jmaye},
   timestamp = {2010.09.16}
+}
+
+@ARTICLE{mirzaei08kalman,
+  author = {Faraz M. Mirzaei and Stergios I. Roumeliotis},
+  title = {A {K}alman Filter-Based Algorithm for {IMU}-Camera Calibration: Observability
+	Analysis and Performance Evaluation},
+  journal = {IEEE Transactions on Robotics},
+  year = {2008},
+  volume = {24},
+  pages = {1143 - 1156},
+  number = {5},
+  file = {mirzaei08kalman.pdf:mirzaei08kalman.pdf:PDF},
+  owner = {jmaye},
+  timestamp = {2012.10.29}
 }
 
 @ARTICLE{mohan01example,
@@ -8581,6 +8622,16 @@
   pdf = {tola08fast.pdf}
 }
 
+@INPROCEEDINGS{tong12gaussian,
+  author = {Chi Hay Tong and Paul Furgale and Timothy D. Barfoot},
+  title = {Gaussian Process {Gauss}-{Newton}: Non-Parametric State Estimation},
+  booktitle = {Proc. of the 9th Conference on Computer and Robot Vision (CRV)},
+  year = {2012},
+  file = {tong12gaussian.pdf:tong12gaussian.pdf:PDF},
+  owner = {jmaye},
+  timestamp = {2012.10.29}
+}
+
 @ARTICLE{torralba07sharing,
   author = {Antonio Torralba and Kevin P. Murphy and William T. Freeman},
   title = {Sharing visual features for multiclass and multiview object detection},
@@ -9597,45 +9648,3 @@
   timestamp = {2010.03.11}
 }
 
-@article{kelly2011visual,
-  title={Visual-inertial sensor fusion: Localization, mapping and sensor-to-sensor self-calibration},
-  author={Kelly, J. and Sukhatme, G.S.},
-  journal={The International Journal of Robotics Research},
-  volume={30},
-  number={1},
-  pages={56--79},
-  year={2011},
-  publisher={SAGE Publications}
-}
-
-@article{hermann1977nonlinear,
-  title={Nonlinear controllability and observability},
-  author={Hermann, R. and Krener, A.},
-  journal={Automatic Control, IEEE Transactions on},
-  volume={22},
-  number={5},
-  pages={728--740},
-  year={1977},
-  publisher={IEEE}
-}
-
-@article{mirzaei2008kalman,
-  title={A Kalman filter-based algorithm for IMU-camera calibration: Observability analysis and performance evaluation},
-  author={Mirzaei, F.M. and Roumeliotis, S.I.},
-  journal={Robotics, IEEE Transactions on},
-  volume={24},
-  number={5},
-  pages={1143--1156},
-  year={2008},
-  publisher={IEEE}
-}
-
-@inproceedings{tong_crv12,
-	Address = {Toronto, Canada},
-	Author = {Chi Hay Tong and Paul T Furgale and Timothy D Barfoot},
-	Booktitle = {9th Canadian Conference on Computer and Robot Vision (CRV)},
-	Doi = {10.1109/CRV.2012.35},
-	Month = {28-30 May},
-	Pages = {206-213},
-	Title = {Gaussian Process Gauss-Newton: Non-Parametric State Estimation},
-	Year = 2012}
