--- a/papers/ivs13/src/conclusion.tex
+++ b/papers/ivs13/src/conclusion.tex
@@ -4,7 +4,7 @@ formulation and computed an MAP estimator using a Gauss-Newton algorithm. To
 cope with unobservability, we have employed truncated QR decomposition as a
 regularization method. For long-term and online operations, we have devised
 a mutual information selection scheme that solely captures informative
-measurements relevant to the calibration. Our algorithm has been thorougly
+measurements relevant to the calibration. Our algorithm has been thoroughly
 tested and validated through extensive simulated and real-world experiments on
 a 2D robot equipped with a laser range finder.
 
