--- a/papers/ivs13/src/introduction.tex
+++ b/papers/ivs13/src/introduction.tex
@@ -49,7 +49,7 @@ mirror the related concept of numerically rank-deficient matrices.
 
 \begin{figure}[t]
 \centering
-\includegraphics[width=\columnwidth]{fig/straight-loop-path-result.eps}
+\includegraphics[width=\columnwidth]{fig/sin-path-result.eps}
 \caption{Exemplary output of our calibration algorithm (best viewed in
 color). The ground truth trajectory and landmark positions are shown in green
 and their respective estimates in blue. While dealing with degenerate cases, our
