--- a/papers/ivs13/src/experiments.tex
+++ b/papers/ivs13/src/experiments.tex
@@ -6,6 +6,10 @@ methods.
 
 \subsection{Experimental Setup}
 
+Our method has been fully implemented in MATLAB and we have used the
+SuiteSparseQR~\cite{davis11algorithm} package for performing sparse matrices
+operations.
+
 Although our eventual goal is full, self-supervised calibration for an
 autonomous vehicle system with multiple heterogeneous sensors, the
 experiments in this paper are based on a realistic, but somewhat
