paper update: nonlinear instead of non-linear

--- a/papers/ivs13/src/experiments.tex
+++ b/papers/ivs13/src/experiments.tex
@@ -210,7 +210,7 @@ prohibitive due to the polynomial computation time.
 
 To conclude this section on simulated data, we will analyze the performance of
 different algorithms, namely an Extended Kalman Filter (EKF) similar
-to~\cite{martinelli06automatic}, a standard batch non-linear least squares
+to~\cite{martinelli06automatic}, a standard batch nonlinear least squares
 method without regularization~\cite{kuemmerle11simultaneous}, and our TQR-MI
 approach, on the straight path scenario and on a well-behaved path with turns.
 We have repeated the experiments 100 times with the same initial conditions.
