--- a/papers/ivs13/src/introduction.tex
+++ b/papers/ivs13/src/introduction.tex
@@ -68,7 +68,7 @@ required.
 
 In this paper, we propose an algorithm to deal with {\em all} of these
 difficulties. Our approach exploits the algebraic links between the Gauss-Newton
-algorithm, the Fisher Information Matrix, and non-linear observability analysis
+algorithm, the Fisher Information Matrix, and nonlinear observability analysis
 to automatically detect directions in parameter space that are numerically
 unobservable and avoid updating our parameters in these directions; at any given
 time, directions in the parameter space that are observable will be updated
