--- a/papers/ivs13/src/related.tex
+++ b/papers/ivs13/src/related.tex
@@ -15,7 +15,7 @@ calibration. Therefore, much efforts have been dedicated over the years to
 develop algorithms for calibration of systems in the field.
 
 The use of a known calibration pattern such as a checkerboard coupled with
-non-linear regression has become the most popular method in computer vision
+nonlinear regression has become the most popular method in computer vision
 during the last decade. It has been deployed both for intrinsic camera
 calibration~\cite{sturm99plane} and extrinsic calibration
 between heterogeneous sensors~\cite{zhang04extrinsic}. While being relatively
@@ -28,7 +28,7 @@ authors have included the calibration problem in a state-space estimation
 framework, either with filtering~\cite{martinelli06automatic} or
 smoothing~\cite{kuemmerle11simultaneous} techniques. Filtering techniques based
 on the Kalman filter are appealing due to their inherently online nature.
-However, in case of non-linear systems, smoothing techniques based on iterative
+However, in case of nonlinear systems, smoothing techniques based on iterative
 optimization are usually superior in terms of accuracy. While building on this
 latter method, our approach attempts to reduce its computational load and copes
 with degenerate cases.
