--- a/papers/ivs13/src/introduction.tex
+++ b/papers/ivs13/src/introduction.tex
@@ -51,10 +51,10 @@ mirror the related concept of numerically rank-deficient matrices.
 \centering
 \includegraphics[width=\columnwidth]{fig/sin-path-result.eps}
 \caption{Exemplary output of our calibration algorithm (best viewed in
-color). The ground truth trajectory and landmark positions are shown in green
-and their respective estimates in blue. While dealing with degenerate cases, our
-method only selects batches of data that provide enough information to the
-estimator.}
+  color). The ground truth trajectory and landmark positions are shown in green,
+  their respective estimates in blue, and the integrated odometry path in red.
+  While dealing with degenerate cases, our method only selects batches of data
+  that provide enough information to the estimator.}
 \label{fig:calib_demo}
 \end{figure}
 
