--- a/papers/ivs13/src/experiments.tex
+++ b/papers/ivs13/src/experiments.tex
@@ -150,7 +150,7 @@ determined the threshold empirically from the scaled system
 
 \begin{figure}[t]
 \centering
-\includegraphics[width=\columnwidth]{fig/straight-path.eps}
+\includegraphics[width=0.5\columnwidth]{fig/straight-path.eps}
 \caption{Straight path example (best viewed in color). The green line
   represents the ground truth path, the red line the integrated odometry path,
   the green crosses the ground truth landmark positions, and the red crosses the
