--- a/papers/ivs13/src/introduction.tex
+++ b/papers/ivs13/src/introduction.tex
@@ -54,7 +54,7 @@ mirror the related concept of numerically rank-deficient matrices.
   color). The ground truth trajectory and landmark positions are shown in green,
   their respective estimates in blue, and the integrated odometry path in red.
   While dealing with degenerate cases, our method only selects batches of data
-  that provide enough information to the estimator.}
+  that provide enough information to the estimator.\vspace{-10pt}}
 \label{fig:calib_demo}
 \end{figure}
 
@@ -84,7 +84,8 @@ parameters based on a set of measurements, and (iii) we have some reasonable
 initial guess for the calibration parameters (e.g. from factory calibration).
 Fig.~\ref{fig:calib_demo} shows a typical calibration run of our algorithm.
 
-The remainder of the paper is structured as follows. Section~\ref{sec:rel}
+%The remainder of the paper is structured as follows.
+Section~\ref{sec:rel}
 will give a brief overview over related approaches. Section~\ref{sec:model} is
 dedicated to the mathematical grounding of our method.
 Section~\ref{sec:exp} demonstrates the validity of our approach through
