--- a/papers/ivs13/src/model.tex
+++ b/papers/ivs13/src/model.tex
@@ -1,6 +1,6 @@
 In this section, we will first state our problem in a probabilistic manner and
 present the mathematical groundings of our method. A practical algorithmic
-sketch will conclude the presentation.
+sketch will conclude the presentation.\cite{huat06industrial}\cite{gibbs11advanced}
 
 \subsection{Problem Formulation\label{subsec:prob}}
 
