--- a/papers/ivs13/bib/bibliography.bib
+++ b/papers/ivs13/bib/bibliography.bib
@@ -1912,7 +1912,6 @@
   year = {2011},
   volume = {38},
   pages = {1-24},
-  number = {1},
   file = {davis11algorithm.pdf:davis11algorithm.pdf:PDF},
   owner = {jmaye},
   timestamp = {2012.09.13}
@@ -2324,8 +2323,6 @@
   year = {2006},
   volume = {13},
   pages = {99-108},
-  number = {2},
-  month = {June},
   file = {durrantwhyte06simultaneous.pdf:durrantwhyte06simultaneous.pdf:PDF},
   owner = {jmaye},
   pdf = {durrantwhyte06simultaneous.pdf},
@@ -2935,7 +2932,6 @@
   year = {2001},
   volume = {23},
   pages = {140-148},
-  number = {2},
   file = {fiore01efficient.pdf:fiore01efficient.pdf:PDF},
   owner = {jmaye},
   timestamp = {2012.10.25}
@@ -3322,7 +3318,6 @@
   year = {2008},
   volume = {3},
   pages = {445-450},
-  number = {3},
   file = {gelman08objections.pdf:gelman08objections.pdf:PDF},
   owner = {jmaye},
   timestamp = {2012.10.25}
@@ -3393,6 +3388,16 @@
   owner = {jmaye},
   pdf = {ghahramani06bayesian.pdf},
   timestamp = {2010.12.20}
+}
+
+@BOOK{gibbs11advanced,
+  title = {Advanced {K}alman Filtering, Least-Squares and Modeling: A Practical
+	Handbook},
+  publisher = {Jon Wiley \& Sons},
+  year = {2011},
+  author = {Bruce P. Gibbs},
+  owner = {jmaye},
+  timestamp = {2012.10.30}
 }
 
 @ARTICLE{gilks92adaptive,
@@ -3839,7 +3844,6 @@
   year = {1977},
   volume = {22},
   pages = {728-740},
-  number = {5},
   file = {hermann77nonlinear.pdf:hermann77nonlinear.pdf:PDF},
   owner = {jmaye},
   timestamp = {2012.10.29}
@@ -3963,7 +3967,6 @@
   year = {1992},
   volume = {58},
   pages = {213-232},
-  number = {197},
   file = {hong92rank.pdf:hong92rank.pdf:PDF},
   owner = {jmaye},
   timestamp = {2012.09.13}
@@ -4175,7 +4178,6 @@
   year = {2007},
   volume = {43},
   pages = {756-759},
-  number = {2},
   file = {jauffret07observability.pdf:jauffret07observability.pdf:PDF},
   owner = {jmaye},
   timestamp = {2012.09.13}
@@ -4363,8 +4365,6 @@
   year = {2009},
   volume = {57},
   pages = {1198-1210},
-  number = {12},
-  month = {December},
   file = {kaess09covariance.pdf:kaess09covariance.pdf:PDF},
   owner = {jmaye},
   timestamp = {2012.09.16}
@@ -4527,7 +4527,6 @@
   year = {2011},
   volume = {30},
   pages = {56-79},
-  number = {1},
   file = {kelly11visual.pdf:kelly11visual.pdf:PDF},
   owner = {jmaye},
   timestamp = {2012.10.29}
@@ -4623,7 +4622,6 @@
   year = {2001},
   volume = {41},
   pages = {1049-1058},
-  number = {5},
   file = {kitagawa01regularization.pdf:kitagawa01regularization.pdf:PDF},
   owner = {jmaye},
   timestamp = {2012.09.13}
@@ -6140,7 +6138,6 @@
   year = {2008},
   volume = {24},
   pages = {1143 - 1156},
-  number = {5},
   file = {mirzaei08kalman.pdf:mirzaei08kalman.pdf:PDF},
   owner = {jmaye},
   timestamp = {2012.10.29}
@@ -7689,8 +7686,6 @@
   year = {2012},
   volume = {31},
   pages = {675-687},
-  number = {5},
-  month = {April},
   file = {sheehan12self.pdf:sheehan12self.pdf:PDF},
   owner = {jmaye},
   timestamp = {2012.09.13}
@@ -8855,8 +8850,6 @@
   year = {1973},
   volume = {10},
   pages = {257-267},
-  number = {2},
-  month = {April},
   file = {varah73numerical.pdf:varah73numerical.pdf:PDF},
   owner = {jmaye},
   timestamp = {2012.09.17}
@@ -9646,5 +9639,14 @@
   owner = {jmaye},
   pdf = {zhu09unsupervised.pdf},
   timestamp = {2010.03.11}
+}
+
+@BOOK{huat06industrial,
+  title = {Industrial Robotics: Programming, Simulation and Applications},
+  publisher = {Pro Literatur Verlag},
+  year = {2006},
+  editor = {Low Kin Huat},
+  owner = {jmaye},
+  timestamp = {2012.10.30}
 }
 
