--- a/papers/ivs13/src/experiments.tex
+++ b/papers/ivs13/src/experiments.tex
@@ -208,8 +208,12 @@ To conclude this section on simulated data, we will analyze the performance of
 different algorithms, namely an Extended Kalman Filter (EKF) similar
 to~\cite{martinelli06automatic}, a standard batch nonlinear least squares
 method without regularization~\cite{kuemmerle11simultaneous}, and our TQR-MI
-approach, on the straight path scenario and on a well-behaved path with turns.
-We have repeated the experiments 100 times with the same initial conditions.
+approach, on a sine wave path with varying amplitude such that the offset
+parameters range from unobservable (straight path or zero amplitude) to
+fully observable (higher amplitude). To get significant statistical results, we
+have repeated the experiment $100$ times with the same initial conditions
+($\delta_x^{(0)}=0.22$ [m], $\delta_y^{(0)}=0.12$ [m], $\psi^{(0)}=0.8$ [rad])
+and amplitudes from $0$ [m] to $3$ [m] with steps of $0.5$ [m].
 
 \subsection{Real-world Data}
 
